--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="card custom-card">
           <img src="assets/delhi/7.jpeg" class="card-img-top" alt="Builder Cancelled the Flat & Forfeited the Complete Amount">
           <div class="card-body">
-            <h5 class="card-title">Search Report</h5>
+            <h5 class="card-title">Title Search Report</h5>
             <p>A search report verifies property ownership, liabilities, encumbrances, and legal compliance for secure transactions.</p>
           </div>
         </div>
@@ -180,7 +180,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <section class="container my-5">
   <div class="text-center mb-4">
-      <h2 class="fw-bold">Why Choose KMA Law Office?</h2>
+      <h2 class="fw-bold">Why Choose Mudra Legal?</h2>
       <p class="text-muted">Expertise, Commitment, and Proven Success in Debt Recovery Cases</p>
   </div>
   
