--- a/title-search-report.html
+++ b/title-search-report.html
@@ -70,7 +70,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="row">
                     <div class="col-4 herocard">
                         <i class="bi bi-truck"></i>
-                        <p>Doorstep document pickup & delivery</p>
+                        <p>In-depth title verification</p>
                     </div>
                     <div class="col-4 herocard">
                         <i class="bi bi-person-badge"></i>
@@ -90,13 +90,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="right-box">
                     <h2 class="fw-bold text-center">Additional Services You Will Get</h2>
                     <ul class="service-list">
-                        <li><i class="bi bi-check-circle-fill"></i> Property searching for 15 years</li>
-                        <li><i class="bi bi-check-circle-fill"></i> Scrutiny of all documents</li>
-                        <li><i class="bi bi-check-circle-fill"></i> Consult with senior property lawyer</li>
-                        <li><i class="bi bi-check-circle-fill"></i> Doorstep document pickup & delivery</li>
-                        <li><i class="bi bi-check-circle-fill"></i> Dedicated property lawyer</li>
-                        <li><i class="bi bi-check-circle-fill"></i> End-to-end property searching support</li>
-                    </ul>
+                      <li><i class="bi bi-check-circle-fill"></i> Property searching for 15 years</li>
+<li><i class="bi bi-check-circle-fill"></i> Scrutiny of all documents</li>
+<li><i class="bi bi-check-circle-fill"></i> Consult with senior property lawyer</li>
+<li><i class="bi bi-check-circle-fill"></i> In-depth title verification</li>
+<li><i class="bi bi-check-circle-fill"></i> Dedicated property lawyer</li>
+<li><i class="bi bi-check-circle-fill"></i> End-to-end property searching support</li>
+
+                  </ul>
                     <p class="fw-bold mt-3 text-center">No hidden cost. 100% Confidentiality</p>
                 </div>
             </div>
